Added random and gradient modes, cleaned code
Added Random mode that will color a square in a random color. Added Gradient mode that will shade a square to black in 10 steps.

Cleaned up code:

- Removed log statements
- Changed variables to constants whenever possible
- Set up new constants to avoid spelling errors

--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     --red: red;
     --green: green;
     --blue: blue;
+    --black: black;
+    --white: white;
+    --grey: grey;
 }
 
 * {
@@ -69,4 +72,20 @@ button span {
     height: 20px;
     /* background-color: red; */
     border-radius: 50%;
+}
+
+.rainbow-wheel {
+    background: conic-gradient(from 90deg,
+            violet,
+            indigo,
+            blue,
+            green,
+            yellow,
+            orange,
+            red,
+            violet);
+}
+
+.bw-gradient {
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(124,124,124,1) 50%, rgba(0,0,0,1) 100%);
 }
