--- a/style.css
+++ b/style.css
@@ -60,11 +60,16 @@ button {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
     padding: 10px 40px;
     background-color: var(--bg-color);
     font-size: 20px;
     border: 3px solid black;
     border-radius: 15px;
+}
+
+button.selected {
+    border: 8px solid black;
 }
 
 button span {
@@ -88,4 +93,12 @@ button span {
 
 .bw-gradient {
     background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(124,124,124,1) 50%, rgba(0,0,0,1) 100%);
+}
+
+.info-box {
+    max-width: 200px;
+    font-size: 16px;
+    font-weight: 700;
+    text-align: left;
+
 }
